# Project_base_python

./: .pdm.toml  pyproject.toml
src/: main.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: users.py
src/app/controllers/: UserController.py
src/app/dtos/: ICreateUserDto.py
src/app/repositories/: IUserRepository.py  UserRepository.py
src/app/schemas/: Users.py  __init__.py
src/app/services/: CreateUserService.py
src/config/: config.py  security.py
