[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Renato Saraiva Angeline", email = "reangeline@hotmail.com.br"},
]
dependencies = [
    "fastapi>=0.75.0",
    "uvicorn>=0.17.5",
    "python-jose>=3.3.0",
    "pydantic[email]>=1.9.0",
    "celery>=5.2.3",
    "raven>=6.10.0",
    "tenacity>=8.0.1",
    "starlette>=0.17.1",
    "sqlalchemy>=1.4.32",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.3",
    "emails>=0.6",
    "python-multipart>=0.0.5",
    "mongoengine>=0.24.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
start = "python src/main.py"